[gd_scene load_steps=37 format=4 uid="uid://djc2xhp1eoxrq"]

[ext_resource type="TileSet" uid="uid://8c6qp6a2ib0k" path="res://scenes/small_things/tiles1.tres" id="1_q5iro"]
[ext_resource type="Script" path="res://scripts/game/first_floors.gd" id="1_xurlr"]
[ext_resource type="PackedScene" uid="uid://chur5k8coswda" path="res://scenes/objects/dude.tscn" id="2_okf8p"]
[ext_resource type="PackedScene" uid="uid://cfvnygkym7fow" path="res://scenes/fade_away_sprite.tscn" id="3_2bxcx"]
[ext_resource type="FontFile" uid="uid://bawutxl10jvj7" path="res://font/Minecraft.ttf" id="4_6jbs5"]
[ext_resource type="Texture2D" uid="uid://lgttj7nr1fd1" path="res://sprites/jump.png" id="4_gonw0"]
[ext_resource type="PackedScene" uid="uid://dtcs5mfqrwcxt" path="res://scenes/small_things/checkpoint.tscn" id="7_hooy1"]
[ext_resource type="Texture2D" uid="uid://3ku5145tko7l" path="res://sprites/glue.png" id="7_w65fn"]
[ext_resource type="PackedScene" uid="uid://bdnedl3jxlewx" path="res://scenes/small_things/shoot.tscn" id="8_1148o"]
[ext_resource type="PackedScene" uid="uid://bgl8mqrhvunhc" path="res://scenes/small_things/death.tscn" id="9_iw6wg"]
[ext_resource type="Script" path="res://scripts/thinsg/next_stage.gd" id="11_bs534"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7h30"]
size = Vector2(74, 370)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl84r"]
size = Vector2(899, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ab4jf"]
size = Vector2(464, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1dpja"]
size = Vector2(416, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfmpe"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n671s"]
size = Vector2(56.875, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qghdq"]
size = Vector2(65.75, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grmn2"]
size = Vector2(49, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_413gu"]
size = Vector2(54, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0w63"]
size = Vector2(540, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35ov2"]
size = Vector2(256, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq77c"]
size = Vector2(64, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5f2fb"]
size = Vector2(112, 13.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx42l"]
size = Vector2(46, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phl20"]
size = Vector2(30, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp2br"]
size = Vector2(31, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbtir"]
size = Vector2(14, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fan1a"]
size = Vector2(29, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hlel"]
size = Vector2(6.5, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owcw1"]
size = Vector2(47.25, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k40ot"]
size = Vector2(20, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3wnj"]
size = Vector2(30, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yiu0"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v423f"]
size = Vector2(10, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h74fd"]
size = Vector2(837, 104)

[node name="first_floors" type="Node2D"]
script = ExtResource("1_xurlr")

[node name="camera" type="Camera2D" parent="."]
unique_name_in_owner = true
offset = Vector2(320, 180)

[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="background"]
offset_right = 658.0
offset_bottom = 390.0
color = Color(0, 0, 0, 1)

[node name="Text" type="RichTextLabel" parent="background"]
unique_name_in_owner = true
top_level = true
custom_minimum_size = Vector2(200, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -162.5
offset_right = 100.0
offset_bottom = -93.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_6jbs5")
bbcode_enabled = true
text = "[center]Can you jump?"
fit_content = true

[node name="walls" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="left" type="CollisionShape2D" parent="walls"]
position = Vector2(27, 175)
shape = SubResource("RectangleShape2D_f7h30")

[node name="left2" type="CollisionShape2D" parent="walls"]
position = Vector2(-21, -191)
shape = SubResource("RectangleShape2D_f7h30")

[node name="bottom" type="CollisionShape2D" parent="walls"]
position = Vector2(443.5, 383)
shape = SubResource("RectangleShape2D_bl84r")

[node name="top" type="CollisionShape2D" parent="walls"]
position = Vector2(232, 0)
shape = SubResource("RectangleShape2D_ab4jf")

[node name="top2" type="CollisionShape2D" parent="walls"]
position = Vector2(208, -23.5)
shape = SubResource("RectangleShape2D_1dpja")

[node name="pl7" type="CollisionShape2D" parent="walls"]
position = Vector2(528, 208)
shape = SubResource("RectangleShape2D_jfmpe")

[node name="pl8" type="CollisionShape2D" parent="walls"]
position = Vector2(604.25, 160)
shape = SubResource("RectangleShape2D_n671s")

[node name="pl9" type="CollisionShape2D" parent="walls"]
position = Vector2(620.438, 112)
shape = SubResource("RectangleShape2D_n671s")

[node name="pl10" type="CollisionShape2D" parent="walls"]
position = Vector2(683.5, 50)
shape = SubResource("RectangleShape2D_n671s")

[node name="pl11" type="CollisionShape2D" parent="walls"]
position = Vector2(528.125, 64)
shape = SubResource("RectangleShape2D_qghdq")

[node name="safegaurd" type="CollisionShape2D" parent="walls"]
position = Vector2(600.5, 0)
shape = SubResource("RectangleShape2D_grmn2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2(21, -104)
shape = SubResource("RectangleShape2D_413gu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2(366, -104)
shape = SubResource("RectangleShape2D_p0w63")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2(-32, -208)
shape = SubResource("RectangleShape2D_35ov2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2(368, -208)
shape = SubResource("RectangleShape2D_35ov2")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="walls"]
position = Vector2(512, -192)
shape = SubResource("RectangleShape2D_cq77c")

[node name="one_ways2" type="StaticBody2D" parent="." groups=["one_way"]]
position = Vector2(64, -371)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="one_ways2"]
position = Vector2(-3, 1.875)
shape = SubResource("RectangleShape2D_5f2fb")

[node name="one_ways1" type="StaticBody2D" parent="." groups=["one_way"]]
position = Vector2(521, -5)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="one_ways1"]
position = Vector2(-1, 3.75)
shape = SubResource("RectangleShape2D_5f2fb")

[node name="death" parent="." instance=ExtResource("9_iw6wg")]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(232, -131.5)
shape = SubResource("RectangleShape2D_jx42l")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="death"]
position = Vector2(336, -131)
shape = SubResource("RectangleShape2D_phl20")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="death"]
position = Vector2(432.5, -131)
shape = SubResource("RectangleShape2D_gp2br")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="death"]
position = Vector2(536, -131)
shape = SubResource("RectangleShape2D_sbtir")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="death"]
position = Vector2(608.5, -131)
shape = SubResource("RectangleShape2D_fan1a")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="death"]
position = Vector2(468.75, -192.25)
shape = SubResource("RectangleShape2D_6hlel")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="death"]
position = Vector2(520.375, -211)
shape = SubResource("RectangleShape2D_owcw1")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="death"]
position = Vector2(203, -624)
shape = SubResource("RectangleShape2D_k40ot")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="death"]
position = Vector2(256, -591.5)
shape = SubResource("RectangleShape2D_n3wnj")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="death"]
position = Vector2(136, -512)
shape = SubResource("RectangleShape2D_6yiu0")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="death"]
position = Vector2(119, -528)
shape = SubResource("RectangleShape2D_6yiu0")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="death"]
position = Vector2(25, -496)
shape = SubResource("RectangleShape2D_v423f")

[node name="main" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AAAAABIAAAAFAD8AAAAAABMAAAAHAD8AAAAAABQAAAAHAD8AAAAAABUAAAABAD8AACABABIAAAAMAD8AAAABABMAAAAMAD8AAAABABQAAAAMAD8AAAABABUAAAABAD8AACACABIAAAAMAD8AAAACABMAAAAMAD8AAAACABQAAAAMAD8AAAACABUAAAABAD8AACADABIAAAAGAD8AAAADABMAAAAIAD8AAAADABQAAAAIAD8AAAADABUAAAABAD8AACAAABEAAAAFAD0AAAABABEAAAAGAD0AAAACABEAAAAFAD4AAAADABEAAAAGAD4AAAAEABUAAAABAD8AACAFABUAAAABAD8AACAGABUAAAABAD8AACAHABUAAAABAD8AACAEAAwAAAAAADoAAAAEAA0AAAAAADoAAAAEAA4AAAAAADoAAAAEAA8AAAAAADoAAAAEABAAAAAAADoAAAAEABEAAAAAADoAAAAEABIAAAAAADoAAAAEABMAAAAAADoAAAAEABQAAAAAADoAAAAAAAwAAAABAD8AAAAAAA0AAAABAD8AAAAAAA4AAAABAD8AAAAAAA8AAAABAD8AAAAAABAAAAABAD8AAAABAAwAAAABAD8AAAABAA0AAAABAD8AAAABAA4AAAABAD8AAAABAA8AAAABAD8AAAABABAAAAABAD8AAAACAAwAAAABAD8AAAACAA0AAAABAD8AAAACAA4AAAABAD8AAAACAA8AAAABAD8AAAACABAAAAABAD8AAAADAAwAAAABAD8AAAADAA0AAAABAD8AAAADAA4AAAABAD8AAAADAA8AAAABAD8AAAADABAAAAABAD8AAAAAAP//AAABAD8AAAAAAAAAAAABAD8AAAAAAAEAAAABAD8AAAAAAAIAAAABAD8AAAAAAAMAAAABAD8AAAAAAAQAAAABAD8AAAAAAAUAAAABAD8AAAAAAAYAAAABAD8AAAAAAAcAAAABAD8AAAAAAAgAAAABAD8AAAAAAAkAAAABAD8AAAAAAAoAAAABAD8AAAAAAAsAAAABAD8AAAABAP//AAABAD8AAAABAAAAAAABAD8AAAABAAEAAAABAD8AAAABAAIAAAABAD8AAAABAAMAAAABAD8AAAABAAQAAAABAD8AAAABAAUAAAABAD8AAAABAAYAAAABAD8AAAABAAcAAAABAD8AAAABAAgAAAABAD8AAAABAAkAAAABAD8AAAABAAoAAAABAD8AAAABAAsAAAABAD8AAAACAP//AAABAD8AAAACAAAAAAABAD8AAAACAAEAAAABAD8AAAACAAIAAAABAD8AAAACAAMAAAABAD8AAAACAAQAAAABAD8AAAACAAUAAAABAD8AAAACAAYAAAABAD8AAAACAAcAAAABAD8AAAACAAgAAAABAD8AAAACAAkAAAABAD8AAAACAAoAAAABAD8AAAACAAsAAAABAD8AAAADAP//AAABAD8AAAADAAAAAAABAD8AAAADAAEAAAABAD8AAAADAAIAAAABAD8AAAADAAMAAAABAD8AAAADAAQAAAABAD8AAAADAAUAAAABAD8AAAADAAYAAAABAD8AAAADAAcAAAABAD8AAAADAAgAAAABAD8AAAADAAkAAAABAD8AAAADAAoAAAABAD8AAAADAAsAAAABAD8AAAAEAP//AAABAD8AAAAEAAAAAAAAADoAAAAEAAEAAAAAADoAAAAEAAIAAAAAADoAAAAEAAMAAAAAADoAAAAEAAQAAAAAADoAAAAEAAUAAAAAADoAAAAEAAYAAAAAADoAAAAEAAcAAAAAADoAAAAEAAgAAAAAADoAAAAEAAkAAAAAADoAAAAEAAoAAAAAADoAAAAEAAsAAAAAADoAAAAXABUAAAABAD8AACAXABYAAAAAADoAAAAXABcAAAAAADoAAAAXABgAAAAAADoAAAAYABUAAAABAD8AACAYABYAAAAAADoAAAAYABcAAAAAADoAAAAYABgAAAAAADoAAAAZABUAAAABAD8AACAZABYAAAAAADoAAAAZABcAAAAAADoAAAAZABgAAAAAADoAAAAaABUAAAABAD8AACAaABYAAAAAADoAAAAaABcAAAAAADoAAAAaABgAAAAAADoAAAAbABUAAAABAD8AACAbABYAAAAAADoAAAAbABcAAAAAADoAAAAbABgAAAAAADoAAAAcABUAAAABAD8AACAcABYAAAAAADoAAAAcABcAAAAAADoAAAAcABgAAAAAADoAAAAdABUAAAABAD8AACAdABYAAAAAADoAAAAdABcAAAAAADoAAAAdABgAAAAAADoAAAAeABUAAAABAD8AACAeABYAAAAAADoAAAAeABcAAAAAADoAAAAeABgAAAAAADoAAAAfABUAAAABAD8AACAfABYAAAAAADoAAAAfABcAAAAAADoAAAAfABgAAAAAADoAAAAgABUAAAABAD8AACAgABYAAAAAADoAAAAgABcAAAAAADoAAAAgABgAAAAAADoAAAAhABUAAAABAD8AACAhABYAAAAAADoAAAAhABcAAAAAADoAAAAhABgAAAAAADoAAAAiABUAAAABAD8AACAiABYAAAAAADoAAAAiABcAAAAAADoAAAAiABgAAAAAADoAAAAjABUAAAABAD8AACAjABYAAAAAADoAAAAjABcAAAAAADoAAAAjABgAAAAAADoAAAAkABUAAAABAD8AACAkABYAAAAAADoAAAAkABcAAAAAADoAAAAkABgAAAAAADoAAAAlABUAAAABAD8AACAlABYAAAAAADoAAAAlABcAAAAAADoAAAAlABgAAAAAADoAAAAmAAwAAAAAADoAAAAmAA0AAAAAADoAAAAmAA4AAAAAADoAAAAmAA8AAAAAADoAAAAmABAAAAAAADoAAAAmABEAAAAAADoAAAAmABIAAAAAADoAAAAmABMAAAAAADoAAAAmABQAAAAAADoAAAAmABUAAAABAD8AACAmABYAAAAAADoAAAAmABcAAAAAADoAAAAmABgAAAAAADoAAAAnAAwAAAABAD8AAAAnAA0AAAABAD8AAAAnAA4AAAABAD8AAAAnAA8AAAABAD8AAAAnABAAAAABAD8AAAAnABEAAAABAD8AAAAnABIAAAABAD8AAAAnABMAAAABAD8AAAAnABQAAAABAD8AAAAnABUAAAABAD8AACAnABYAAAAAADoAAAAnABcAAAAAADoAAAAnABgAAAAAADoAAAAoAAwAAAAAADoAAAAoAA0AAAAAADoAAAAoAA4AAAAAADoAAAAoAA8AAAAAADoAAAAoABAAAAAAADoAAAAoABEAAAAAADoAAAAoABIAAAAAADoAAAAoABMAAAAAADoAAAAoABQAAAAAADoAAAAoABUAAAABAD8AACAoABYAAAAAADoAAAAoABcAAAAAADoAAAAoABgAAAAAADoAAAApAAwAAAAAADoAAAApAA0AAAAAADoAAAApAA4AAAAAADoAAAApAA8AAAAAADoAAAApABAAAAAAADoAAAApABEAAAAAADoAAAApABIAAAAAADoAAAApABMAAAAAADoAAAApABQAAAAAADoAAAApABUAAAABAD8AACApABYAAAAAADoAAAApABcAAAAAADoAAAApABgAAAAAADoAAAAqAAwAAAAAADoAAAAqAA0AAAAAADoAAAAqAA4AAAAAADoAAAAqAA8AAAAAADoAAAAqABAAAAAAADoAAAAqABEAAAAAADoAAAAqABIAAAAAADoAAAAqABMAAAAAADoAAAAqABQAAAAAADoAAAAqABUAAAABAD8AACAqABYAAAAAADoAAAAqABcAAAAAADoAAAAqABgAAAAAADoAAAArAAwAAAAAADoAAAArAA0AAAAAADoAAAArAA4AAAAAADoAAAArAA8AAAAAADoAAAArABAAAAAAADoAAAArABEAAAAAADoAAAArABIAAAAAADoAAAArABMAAAAAADoAAAArABQAAAAAADoAAAArABUAAAABAD8AACArABYAAAAAADoAAAArABcAAAAAADoAAAArABgAAAAAADoAAAAsAAwAAAAAADoAAAAsAA0AAAAAADoAAAAsAA4AAAAAADoAAAAsAA8AAAAAADoAAAAsABAAAAAAADoAAAAsABEAAAAAADoAAAAsABIAAAAAADoAAAAsABMAAAAAADoAAAAsABQAAAAAADoAAAAsABUAAAABAD8AACAsABYAAAAAADoAAAAsABcAAAAAADoAAAAsABgAAAAAADoAAAAAABYAAAAAADoAAAAAABcAAAAAADoAAAAAABgAAAAAADoAAAAAABkAAAAAADoAAAABABYAAAAAADoAAAABABcAAAAAADoAAAABABgAAAAAADoAAAABABkAAAAAADoAAAACABYAAAAAADoAAAACABcAAAAAADoAAAACABgAAAAAADoAAAACABkAAAAAADoAAAADABYAAAAAADoAAAADABcAAAAAADoAAAADABgAAAAAADoAAAADABkAAAAAADoAAAAEABYAAAAAADoAAAAEABcAAAAAADoAAAAEABgAAAAAADoAAAAEABkAAAAAADoAAAAFABYAAAAAADoAAAAFABcAAAAAADoAAAAFABgAAAAAADoAAAAFABkAAAAAADoAAAAGABYAAAAAADoAAAAGABcAAAAAADoAAAAGABgAAAAAADoAAAAGABkAAAAAADoAAAAHABYAAAAAADoAAAAHABcAAAAAADoAAAAHABgAAAAAADoAAAAHABkAAAAAADoAAAAIABYAAAAAADoAAAAIABcAAAAAADoAAAAIABgAAAAAADoAAAAIABkAAAAAADoAAAAJABYAAAAAADoAAAAJABcAAAAAADoAAAAJABgAAAAAADoAAAAJABkAAAAAADoAAAAKABYAAAAAADoAAAAKABcAAAAAADoAAAAKABgAAAAAADoAAAAKABkAAAAAADoAAAALABYAAAAAADoAAAALABcAAAAAADoAAAALABgAAAAAADoAAAALABkAAAAAADoAAAAMABYAAAAAADoAAAAMABcAAAAAADoAAAAMABgAAAAAADoAAAAMABkAAAAAADoAAAANABYAAAAAADoAAAANABcAAAAAADoAAAANABgAAAAAADoAAAANABkAAAAAADoAAAAOABYAAAAAADoAAAAOABcAAAAAADoAAAAOABgAAAAAADoAAAAOABkAAAAAADoAAAAPABYAAAAAADoAAAAPABcAAAAAADoAAAAPABgAAAAAADoAAAAPABkAAAAAADoAAAAQABYAAAAAADoAAAAQABcAAAAAADoAAAAQABgAAAAAADoAAAAQABkAAAAAADoAAAARABYAAAAAADoAAAARABcAAAAAADoAAAARABgAAAAAADoAAAARABkAAAAAADoAAAASABYAAAAAADoAAAASABcAAAAAADoAAAASABgAAAAAADoAAAASABkAAAAAADoAAAATABYAAAAAADoAAAATABcAAAAAADoAAAATABgAAAAAADoAAAATABkAAAAAADoAAAAUABYAAAAAADoAAAAUABcAAAAAADoAAAAUABgAAAAAADoAAAAUABkAAAAAADoAAAAVABYAAAAAADoAAAAVABcAAAAAADoAAAAVABgAAAAAADoAAAAVABkAAAAAADoAAAAWABYAAAAAADoAAAAWABcAAAAAADoAAAAWABgAAAAAADoAAAAWABkAAAAAADoAAAAXABkAAAAAADoAAAAIABUAAAABAD8AACAJABUAAAABAD8AACAKABUAAAABAD8AACALABUAAAABAD8AACAMABUAAAABAD8AACANABUAAAABAD8AACAOABUAAAABAD8AACAPABUAAAABAD8AACAQABUAAAABAD8AACARABUAAAABAD8AACASABUAAAABAD8AACATABUAAAABAD8AACAUABUAAAABAD8AACAVABUAAAABAD8AACAWABUAAAABAD8AACAtABUAAAABAD8AACAuABUAAAABAD8AACAnAAoAAAABAD8AAAAnAAsAAAABAD8AAAAnAP//AAABAD8AAAAnAAAAAAABAD8AAAAnAAEAAAABAD8AAAAnAAIAAAABAD8AAAAnAAMAAAABAD8AAAAnAAQAAAABAD8AAAAnAAUAAAABAD8AAAAnAAYAAAABAD8AAAAnAAcAAAABAD8AAAAnAAgAAAABAD8AAAAnAAkAAAABAD8AAAAmAAAAAAAAADoAAAAmAAIAAAAAADoAAAAmAAMAAAAAADoAAAAmAAQAAAAAADoAAAAmAAYAAAABAD8AAAAmAAcAAAAAADoAAAAmAAgAAAAAADoAAAAmAAkAAAABAD8AAAAmAAoAAAAAADoAAAAmAAsAAAAAADoAAAAGABAAAAABAD8AACAMABAAAAABAD8AACASABAAAAABAD8AACAYABAAAAABAD8AACAeABAAAAABAD8AACAkABAAAAABAD8AACAFAP//AAABAD8AAAAGAP//AAABAD8AAAAHAP//AAABAD8AAAAIAP//AAABAD8AAAAJAP//AAABAD8AAAAKAP//AAABAD8AAAALAP//AAABAD8AAAAMAP//AAABAD8AAAANAP//AAABAD8AAAAOAP//AAABAD8AAAAPAP//AAABAD8AAAAQAP//AAABAD8AAAARAP//AAABAD8AAAASAP//AAABAD8AAAATAP//AAABAD8AAAAUAP//AAABAD8AAAAVAP//AAABAD8AAAAWAP//AAABAD8AAAAXAP//AAABAD8AAAAYAP//AAABAD8AAAAZAP//AAABAD8AAAAaAP//AAABAD8AAAAbAP//AAABAD8AAAAcAP//AAABAD8AAAAgAAwAAAABAD8AAAAhAAwAAAABAD8AAAAkAAkAAAABAD8AAAAlAAkAAAABAD8AAAAnAP7/AAABAD8AAAAnAP3/AAABAD8AAAAnAPz/AAABAD8AAAAnAPv/AAABAD8AAAAnAPr/AAABAD8AAAAnAPn/AAABAD8AAAAnAPj/AAABAD8AAAAnAPf/AAABAD8AAAAnAOv/AAABAD8AAAAnAOz/AAABAD8AAAAnAO3/AAABAD8AAAAnAO7/AAABAD8AAAAnAO//AAABAD8AAAAnAPD/AAABAD8AAAAnAPH/AAABAD8AAAAnAPL/AAABAD8AAAAnAPP/AAABAD8AAAAnAPT/AAABAD8AAAAnAPX/AAABAD8AAAAnAPb/AAABAD8AAAAnAOn/AAABAD8AAAAnAOr/AAABAD8AAAAAAP7/AAABAD8AAAAAAP3/AAABAD8AAAAAAPz/AAABAD8AAAAAAOn/AAABAD8AAAAAAOr/AAABAD8AAAAAAOv/AAABAD8AAAAAAOz/AAABAD8AAAAAAO3/AAABAD8AAAAAAO7/AAABAD8AAAAAAO//AAABAD8AAAAAAPD/AAABAD8AAAAAAPH/AAABAD8AAAAAAPL/AAABAD8AAAAAAPP/AAABAD8AAAAAAPT/AAABAD8AAAAAAPX/AAABAD8AAAAAAPb/AAABAD8AAAAAAPf/AAABAD8AAAAAAPj/AAABAD8AAAAAAPn/AAABAD8AAAAAAPr/AAABAD8AAAAAAPv/AAABAD8AAAAmAAEAAAAAADoAAAAmAAUAAAAAADoAAAAlAAYAAAABAD8AAAAiAP//AAACADsAABAeAP//AAACADsAAAAfAP//AAADADsAAAAgAP//AAADADsAAAAhAP//AAADADsAAAAkAP//AAABAD8AAAAlAP//AAABAD8AAAAmAP//AAABAD8AAAAfAAMAAAABAD8AAAAgAAMAAAABAD8AAAAhAAMAAAABAD8AAAAiAAMAAAABAD8AABAbAP7/AAAMADwAAAABAPz/AAANADwAAAABAP7/AAABAD8AAAABAP3/AAABAD8AAAACAP3/AAABAD8AAAACAP7/AAABAD8AAAADAP3/AAABAD8AAAADAP7/AAABAD8AAAAEAP3/AAABAD8AAAAEAP7/AAABAD8AAAAFAP3/AAABAD8AAAAFAP7/AAABAD8AAAAGAP3/AAABAD8AAAAGAP7/AAABAD8AAAAHAP3/AAABAD8AAAAHAP7/AAABAD8AAAAIAP3/AAABAD8AAAAIAP7/AAABAD8AAAAJAP3/AAABAD8AAAAJAP7/AAABAD8AAAAKAP3/AAABAD8AAAAKAP7/AAABAD8AAAALAP3/AAABAD8AAAALAP7/AAABAD8AAAAMAP3/AAABAD8AAAAMAP7/AAABAD8AAAANAP3/AAABAD8AAAANAP7/AAABAD8AAAAOAP3/AAABAD8AAAAOAP7/AAABAD8AAAAPAP3/AAABAD8AAAAPAP7/AAABAD8AAAAQAP3/AAABAD8AAAAQAP7/AAABAD8AAAARAP3/AAABAD8AAAARAP7/AAABAD8AAAASAP3/AAABAD8AAAASAP7/AAABAD8AAAATAP3/AAABAD8AAAATAP7/AAABAD8AAAAUAP3/AAABAD8AAAAUAP7/AAABAD8AAAAVAP3/AAABAD8AAAAVAP7/AAABAD8AAAAWAP3/AAABAD8AAAAWAP7/AAABAD8AAAAXAP3/AAABAD8AAAAXAP7/AAABAD8AAAAYAP3/AAABAD8AAAAYAP7/AAABAD8AAAAZAP3/AAABAD8AAAAZAP7/AAABAD8AAAAmAOn/AAABAD8AAAAlAOn/AAABAD8AAAAkAOn/AAABAD8AAAAjAOn/AAABAD8AAAAiAOn/AAABAD8AAAAhAOn/AAABAD8AAAAgAOn/AAABAD8AAAAfAOn/AAABAD8AAAAeAOn/AAABAD8AAAAdAOn/AAABAD8AAAAcAOn/AAABAD8AAAAbAOn/AAABAD8AAAAaAOn/AAABAD8AAAAZAOn/AAABAD8AAAAYAOn/AAABAD8AAAAXAOn/AAABAD8AAAABAOn/AAABAD8AAAAGAOn/AAABAD8AAAAHAOn/AAABAD8AAAAIAOn/AAABAD8AAAAJAOn/AAABAD8AAAAKAOn/AAABAD8AAAALAOn/AAABAD8AAAAMAOn/AAABAD8AAAANAOn/AAABAD8AAAAOAOn/AAABAD8AAAAPAOn/AAABAD8AAAAQAOn/AAABAD8AAAARAOn/AAABAD8AAAASAOn/AAABAD8AAAABAPn/AAABAD8AAAACAPn/AAABAD8AAAACAPj/AAABAD8AAAABAPj/AAABAD8AAAAGAPj/AAABAD8AAAAHAPj/AAABAD8AAAAIAPj/AAABAD8AAAAJAPj/AAABAD8AAAAKAPj/AAABAD8AAAALAPj/AAABAD8AAAAMAPj/AAABAD8AAAANAPj/AAABAD8AAAAOAPj/AAABAD8AAAAPAPj/AAABAD8AAAAQAPj/AAABAD8AAAARAPj/AAABAD8AAAASAPj/AAABAD8AAAATAPj/AAABAD8AAAAUAPj/AAABAD8AAAAVAPj/AAABAD8AAAAWAPj/AAABAD8AAAAXAPj/AAABAD8AAAAYAPj/AAABAD8AAAAZAPj/AAABAD8AAAAaAPj/AAABAD8AAAAbAPj/AAABAD8AAAAcAPj/AAABAD8AAAAdAPj/AAABAD8AAAAeAPj/AAABAD8AAAAfAPj/AAABAD8AAAAgAPj/AAABAD8AAAAhAPj/AAABAD8AAAAiAPj/AAABAD8AAAAjAPj/AAABAD8AAAAkAPj/AAABAD8AAAAlAPj/AAABAD8AAAAmAPj/AAABAD8AAAAmAPn/AAABAD8AAAAlAPn/AAABAD8AAAAkAPn/AAABAD8AAAAjAPn/AAABAD8AAAAiAPn/AAABAD8AAAAhAPn/AAABAD8AAAAgAPn/AAABAD8AAAAfAPn/AAABAD8AAAAeAPn/AAABAD8AAAAdAPn/AAABAD8AAAAcAPn/AAABAD8AAAAbAPn/AAABAD8AAAAWAPn/AAABAD8AAAAXAPn/AAABAD8AAAAYAPn/AAABAD8AAAAZAPn/AAABAD8AAAAaAPn/AAABAD8AAAAVAPn/AAABAD8AAAAUAPn/AAABAD8AAAATAPn/AAABAD8AAAASAPn/AAABAD8AAAARAPn/AAABAD8AAAAQAPn/AAABAD8AAAAPAPn/AAABAD8AAAAOAPn/AAABAD8AAAANAPn/AAABAD8AAAAMAPn/AAABAD8AAAALAPn/AAABAD8AAAAKAPn/AAABAD8AAAAJAPn/AAABAD8AAAAIAPn/AAABAD8AAAAHAPn/AAABAD8AAAAGAPn/AAABAD8AAAANAPf/AAAOADwAAAAOAPf/AAAOADwAAAAUAPf/AAAOADwAAAAVAPf/AAAOADwAAAAaAPf/AAAOADwAAAAbAPf/AAAOADwAAAAhAPf/AAAOADwAAAAlAPf/AAAOADwAAAAmAPf/AAAOADwAAAABAPL/AAABAD8AAAAQAPL/AAABAD8AAAARAPL/AAABAD8AAAASAPL/AAABAD8AAAATAPL/AAABAD8AAAAUAPL/AAABAD8AAAAVAPL/AAABAD8AAAAWAPL/AAABAD8AAAAXAPL/AAABAD8AAAAYAPL/AAABAD8AAAAZAPL/AAABAD8AAAAaAPL/AAABAD8AAAAhAPP/AAABAD8AAAAgAPP/AAABAD8AAAAfAPP/AAABAD8AAAAbAPL/AAABAD8AAAAcAPL/AAABAD8AAAAdAPL/AAABAD8AAAAeAPL/AAABAD8AAAAeAPP/AAABAD8AAAAlAPP/AAABAD8AAAAmAPP/AAABAD8AAAAmAPL/AAABAD8AAAAdAPP/AAAPADwAAEAhAPL/AAAPADwAABAgAPL/AAAPADwAABAfAPL/AAAPADwAABAPAPL/AAABAD8AAAAOAPL/AAABAD8AAAANAPL/AAABAD8AAAAMAPL/AAABAD8AAAAFAPL/AAABAD8AAAAEAPL/AAABAD8AAAADAPL/AAABAD8AAAACAPL/AAABAD8AAAAPAPf/AAAOADwAAAATAOn/AAABAD8AAAAUAOn/AAABAD8AAAAVAOn/AAABAD8AAAAWAOn/AAABAD8AAAABAO3/AAABAD8AAAACAO3/AAABAD8AAAADAO3/AAABAD8AAAAEAO3/AAABAD8AAAAFAO3/AAABAD8AAAALAPL/AAABAD8AAAABAOr/AAABAD8AAAABAOv/AAABAD8AAAABAOz/AAABAD8AAAACAOv/AAABAD8AAAACAOz/AAABAD8AAAACAOj/AAACADsAAAADAOj/AAADADsAAAAEAOj/AAADADsAAAAFAOj/AAACADsAABAAAOj/AAABAD8AAAABAOj/AAABAD8AAAAGAOj/AAABAD8AAAAHAOj/AAABAD8AAAAIAOj/AAABAD8AAAAJAOj/AAABAD8AAAAKAOj/AAABAD8AAAAMAOj/AAABAD8AAAANAOj/AAABAD8AAAALAOj/AAABAD8AAAAOAOj/AAABAD8AAAAPAOj/AAABAD8AAAAQAOj/AAABAD8AAAARAOj/AAABAD8AAAASAOj/AAABAD8AAAATAOj/AAABAD8AAAAUAOj/AAABAD8AAAAVAOj/AAABAD8AAAAWAOj/AAABAD8AAAAXAOj/AAABAD8AAAAYAOj/AAABAD8AAAAZAOj/AAABAD8AAAAaAOj/AAABAD8AAAAbAOj/AAABAD8AAAAcAOj/AAABAD8AAAAdAOj/AAABAD8AAAAeAOj/AAABAD8AAAAfAOj/AAABAD8AAAAgAOj/AAABAD8AAAAhAOj/AAABAD8AAAAiAOj/AAABAD8AAAAjAOj/AAABAD8AAAAkAOj/AAABAD8AAAAlAOj/AAABAD8AAAAmAOj/AAABAD8AAAAnAOj/AAABAD8AAAAnANL/AAABAD8AAAAnANP/AAABAD8AAAAnANT/AAABAD8AAAAnANX/AAABAD8AAAAnANb/AAABAD8AAAAnANf/AAABAD8AAAAnANj/AAABAD8AAAAnANn/AAABAD8AAAAnANr/AAABAD8AAAAnANv/AAABAD8AAAAnANz/AAABAD8AAAAnAN3/AAABAD8AAAAnAN7/AAABAD8AAAAnAN//AAABAD8AAAAnAOD/AAABAD8AAAAnAOH/AAABAD8AAAAnAOL/AAABAD8AAAAnAOP/AAABAD8AAAAnAOT/AAABAD8AAAAnAOX/AAABAD8AAAAnAOb/AAABAD8AAAAnAOf/AAABAD8AACAAANL/AAABAD8AAAAAANP/AAABAD8AAAAAANT/AAABAD8AAAAAANX/AAABAD8AAAAAANb/AAABAD8AAAAAANf/AAABAD8AAAAAANj/AAABAD8AAAAAANn/AAABAD8AAAAAANr/AAABAD8AAAAAANv/AAABAD8AAAAAANz/AAABAD8AAAAAAN3/AAABAD8AAAAAAN7/AAABAD8AAAAAAN//AAABAD8AAAAAAOD/AAABAD8AAAAAAOH/AAABAD8AAAAAAOL/AAABAD8AAAAAAOP/AAABAD8AAAAAAOT/AAABAD8AAAAAAOX/AAABAD8AAAAAAOb/AAABAD8AAAAAAOf/AAABAD8AACABANL/AAABAD8AAAACANL/AAABAD8AAAADANL/AAABAD8AAAAEANL/AAABAD8AAAAFANL/AAABAD8AAAAGANL/AAABAD8AAAAHANL/AAABAD8AAAAIANL/AAABAD8AAAAJANL/AAABAD8AAAAKANL/AAABAD8AAAALANL/AAABAD8AAAAMANL/AAABAD8AAAANANL/AAABAD8AAAAOANL/AAABAD8AAAAPANL/AAABAD8AAAAQANL/AAABAD8AAAAYANL/AAABAD8AAAAZANL/AAABAD8AAAAaANL/AAABAD8AAAAbANL/AAABAD8AAAAcANL/AAABAD8AAAAdANL/AAABAD8AAAAeANL/AAABAD8AAAAfANL/AAABAD8AAAAgANL/AAABAD8AAAAhANL/AAABAD8AAAAiANL/AAABAD8AAAAXANL/AAABAD8AAAARANf/AAABAD8AAAASANf/AAABAD8AAAATANf/AAABAD8AAAAUANf/AAABAD8AAAAVANf/AAABAD8AAAAWANf/AAABAD8AAAAWANj/AAABAD8AAAARANj/AAABAD8AAAARANn/AAABAD8AAAAWANn/AAABAD8AAAASANj/AAABAD8AAAATANj/AAABAD8AAAAUANj/AAABAD8AAAAVANj/AAABAD8AAAAVANn/AAABAD8AAAAUANn/AAABAD8AAAATANn/AAABAD8AAAASANn/AAABAD8AAAAXANn/AAABAD8AAAAYANn/AAABAD8AAAAZANn/AAABAD8AAAAaANn/AAABAD8AAAAbANn/AAABAD8AAAAcANn/AAABAD8AAAAdANn/AAABAD8AAAAeANn/AAABAD8AAAAfANn/AAABAD8AAAAgANr/AAABAD8AAAAgANv/AAABAD8AAAAgAN7/AAABAD8AAAAgAN//AAABAD8AAAAgAOD/AAABAD8AAAAgAOH/AAABAD8AAAAgAOL/AAABAD8AAAAgAOP/AAABAD8AAAAgAOT/AAABAD8AAAAfAOT/AAABAD8AAAAeAOT/AAABAD8AAAAdAOT/AAABAD8AAAAcAOT/AAABAD8AAAAbAOT/AAABAD8AAAAQANf/AAABAD8AAAAQANj/AAABAD8AAAAQANn/AAABAD8AAAAPANn/AAABAD8AAAAPANj/AAABAD8AAAAPANf/AAABAD8AAAAmAOf/AAANADwAAGAhAOf/AAANADwAAGAEAOf/AAAMADwAAAAhANv/AAABAD8AAAAiANv/AAABAD8AAAAjANv/AAABAD8AAAAkANv/AAABAD8AAAAlANv/AAABAD8AAAAmANv/AAABAD8AAAAfAN7/AAABAD8AAAAeAN7/AAABAD8AAAAdAN7/AAABAD8AAAAcAN7/AAABAD8AAAAbAN7/AAABAD8AAAAaAN7/AAABAD8AAAAZAN7/AAABAD8AAAAYAN7/AAABAD8AAAAXAN7/AAABAD8AAAAWAN7/AAABAD8AAAAVAN7/AAABAD8AAAAUAN7/AAABAD8AAAATAN7/AAABAD8AAAASAN7/AAABAD8AAAARAN7/AAABAD8AAAAQAN7/AAABAD8AAAAPAN7/AAABAD8AAAAOAN7/AAABAD8AAAANAN7/AAABAD8AAAAMAN7/AAABAD8AAAALAN7/AAABAD8AAAAKAN7/AAABAD8AAAAOANf/AAABAD8AAAAOANj/AAABAD8AAAAOANn/AAABAD8AAAAPANr/AAAPAD0AADAQANr/AAAPAD0AADANANf/AAABAD8AAAANANj/AAABAD8AAAANANn/AAABAD8AAAAMANf/AAAPAD0AAGAMANj/AAAPAD0AAGAMANn/AAAPAD0AAGARANL/AAABAD8AAAASANL/AAABAD8AAAATANL/AAABAD8AAAAUANL/AAABAD8AAAAVANL/AAABAD8AAAAWANL/AAABAD8AAAAiANP/AAABAD8AAAAiANT/AAABAD8AAAAiANX/AAABAD8AAAAiANb/AAABAD8AAAAiANf/AAABAD8AAAAfANr/AAABAD8AAAAJAN7/AAABAD8AAAAIAN7/AAABAD8AAAAHAN7/AAAPADwAAGABAN7/AAAPADwAAFABAN//AAAPADwAAFAIAN//AAAPADwAADABAOD/AAAPADwAAFABAOH/AAAPADwAAFABAOL/AAAPADwAAFAjANL/AAACADsAAAAkANL/AAADADsAAAAlANL/AAADADsAAAAmANL/AAACADsAABA=")
tile_set = ExtResource("1_q5iro")

[node name="top" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AAAAABAAAAABAD8AAAABABAAAAABAD8AAAACABAAAAABAD8AAAADABAAAAABAD8AAAAGABAAAAAMADsAAAAMABAAAAAMADsAAAASABAAAAAMADsAAAAYABAAAAAMADsAAAAeABAAAAAMADsAAAAkABAAAAAMADsAAAABABQAAAAHADsAAAABABMAAAAGADsAAAABABIAAAAGADsAAAACABIAAAAHADsAAAACABMAAAAHADsAAAACABQAAAAGADsAAAAAABQAAAAGADoAAGAAABMAAAAGADoAAGAAABIAAAAGADoAAGADABIAAAAGADoAAHADABMAAAAGADoAAHADABQAAAAGADoAAHABABEAAAAGADoAAAACABEAAAAGADoAAAACABUAAAAIADoAACABABUAAAAIADoAACAKAA0AAAAPAD8AAAAOAAcAAAAPAD8AAAAcAAQAAAAPAD4AAAAiAAAAAAAPAD8AAAAjAAkAAAAPAD8AAAAhABMAAAAPAD8AAAAaABMAAAAPAD4AAAAPABIAAAAPAD8AAAABAA4AAAAEAD4AAAACAAgAAAAEAD4AAAAAAAMAAAAEAD8AAAACAAEAAAAEAD4AAAANABUAAAAEAD4AAAAkABUAAAAEAD4AAAAnAA4AAAAEAD8AAAAnAAYAAAAEAD8AAAAnAAIAAAAEAD8AAAAnAAMAAAAEAD8AAAAJAAQAAAAPAD8AAAAWAAsAAAAPAD8AAAAbAA4AAAAPAD4AAAA=")
tile_set = ExtResource("1_q5iro")

[node name="toptop" type="TileMapLayer" parent="."]
z_index = 2
use_parent_material = true
position = Vector2(0, 8)
tile_set = ExtResource("1_q5iro")

[node name="Dude" parent="." instance=ExtResource("2_okf8p")]
unique_name_in_owner = true
position = Vector2(88, 335)

[node name="jump" parent="." instance=ExtResource("3_2bxcx")]
position = Vector2(568, 320)
texture = ExtResource("4_gonw0")
flag = "canJump"

[node name="glue" parent="." instance=ExtResource("3_2bxcx")]
position = Vector2(472, -480)
collision_layer = 2
collision_mask = 2
texture = ExtResource("7_w65fn")
flag = "can_wall_jump"

[node name="checkpoint" parent="." instance=ExtResource("7_hooy1")]
position = Vector2(441, -16)
scale = Vector2(2.99298, 1.21482)

[node name="checkpoint2" parent="." instance=ExtResource("7_hooy1")]
position = Vector2(65, -391)
scale = Vector2(4.68, 1.12)

[node name="shoot" parent="." instance=ExtResource("8_1148o")]
cooldown = 2.0
dir = Vector2(1, 0)
speed = 5.0

[node name="shoot2" parent="." instance=ExtResource("8_1148o")]
position = Vector2(536, -382)
cooldown = 0.75
dir = Vector2(0, -1)
speed = 7.0
n_rotation = 270.0

[node name="shoot3" parent="." instance=ExtResource("8_1148o")]
position = Vector2(616, -382)
cooldown = 0.75
dir = Vector2(0, -1)
speed = 7.0
n_rotation = 270.0

[node name="player_loc" type="Marker2D" parent="."]
position = Vector2(88, 335)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="next_stage" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("11_bs534")
override = Vector2(64, 335)

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_stage"]
position = Vector2(347, -781)
shape = SubResource("RectangleShape2D_h74fd")

[connection signal="body_entered" from="jump" to="." method="_jump_obtained"]
[connection signal="body_entered" from="glue" to="." method="_glue_obtained"]
[connection signal="body_entered" from="checkpoint" to="." method="_checkpoint_1"]
[connection signal="body_entered" from="next_stage" to="next_stage" method="_on_body_entered"]
